--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^8.12",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
         "tymon/jwt-auth": "^1.0"
     },
