--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "calcinai/php-imagick": "^0.1.2",
-        "cloudinary/cloudinary_php": "1.20",
+        "cloudinary-labs/cloudinary-laravel": "^1.0",
+        "cloudinary/cloudinary_php": "^2.3",
         "cviebrock/eloquent-sluggable": "^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
