--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-query-builder": "^4.0",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
