--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "calcinai/php-imagick": "^0.1.2",
         "cloudinary-labs/cloudinary-laravel": "^1.0",
