--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.5",
+        "phpoffice/phppresentation": "^1.0",
         "spatie/laravel-query-builder": "^4.0",
         "tymon/jwt-auth": "^1.0"
     },
